Fixed squished frame bug in Admin view with Firefox

--- a/css/snipes-admin.css
+++ b/css/snipes-admin.css
@@ -11,7 +11,6 @@
 
 #snipes-frame {
   border: none;
-  overflow: hidden;
   position: relative;
 }
 
